# casse-briques-c

./: CMakeLists.txt  README.md  main.c
code/: main.c
code/prototypes/: bomb.h  bot.h  file.h  game.h  gameEntity.h  inventory.h  map.h  menu.h  player.h
code/sources/: bomb.c  bot.c  file.c  game.c  gameEntity.c  inventory.c  map.c  menu.c  player.c
